--- a/poke-team-builder/package.json
+++ b/poke-team-builder/package.json
@@ -10,7 +10,9 @@
     "test": "vitest"
   },
   "dependencies": {
+    "axios": "^1.3.5",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-test-renderer": "^18.2.0",
     "vitest": "^0.29.8"
